@@ -17,6 +17,7 @@ lint_flags = "--check"
 tidy_flags = "--in-place"
 ok_exit_codes = 0
 lint_failure_exit_codes = 1
+expect_stderr = true
 
 [commands.perlcritic]
 type = "lint"
